--- a/package.json
+++ b/package.json
@@ -10,15 +10,18 @@
     "format": "prettier --write ."
   },
   "dependencies": {
+    "@types/minimatch": "^5.1.2",
     "@types/node": "20.5.7",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
+    "minimatch": "^9.0.3",
     "next": "13.4.19",
     "postcss": "8.4.29",
     "react": "18.2.0",
+    "react-data-grid": "^7.0.0-beta.37",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.46.1",
     "tailwindcss": "3.3.3",
