--- a/package.json
+++ b/package.json
@@ -2,21 +2,28 @@
   "name": "next-experiments",
   "version": "0.0.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev",
+    "worker": "ts-node --esm ./src/worker/worker.ts",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
     "format": "prettier --write ."
   },
   "dependencies": {
+    "@radix-ui/react-slot": "^1.0.2",
     "@types/minimatch": "^5.1.2",
     "@types/node": "20.5.7",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
+    "bullmq": "^4.10.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.0.0",
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
+    "lucide-react": "^0.277.0",
     "minimatch": "^9.0.3",
     "next": "13.4.19",
     "postcss": "8.4.29",
@@ -24,11 +31,14 @@
     "react-data-grid": "^7.0.0-beta.37",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.46.1",
+    "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "5.2.2"
   },
   "devDependencies": {
     "eslint-config-prettier": "^9.0.0",
-    "prettier": "3.0.3"
+    "prettier": "3.0.3",
+    "ts-node": "^10.9.1"
   }
 }
