--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.0.2",
+    "@react-three/drei": "^9.84.2",
+    "@react-three/fiber": "^8.14.2",
     "@types/minimatch": "^5.1.2",
     "@types/node": "20.5.7",
     "@types/react": "18.2.21",
@@ -24,6 +26,7 @@
     "clsx": "^2.0.0",
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
+    "leva": "^0.9.35",
     "lucide-react": "^0.277.0",
     "minimatch": "^9.0.3",
     "next": "13.4.19",
@@ -35,6 +38,7 @@
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.7",
+    "three": "^0.156.1",
     "typescript": "5.2.2"
   },
   "devDependencies": {
