--- a/package.json
+++ b/package.json
@@ -26,15 +26,18 @@
     "clsx": "^2.0.0",
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
+    "langchain": "^0.0.153",
     "leva": "^0.9.35",
     "lucide-react": "^0.277.0",
     "minimatch": "^9.0.3",
     "next": "13.4.19",
+    "playwright": "^1.38.1",
     "postcss": "8.4.29",
     "react": "18.2.0",
     "react-data-grid": "^7.0.0-beta.37",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.46.1",
+    "react-markdown": "^8.0.7",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.7",
