feat: add push notification example

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,7 @@
 PATH_ABLETON=/Path/to/Ableton/Projects
 PATH_FILE_NAV=/Path/to/folder
 OPENAI_API_KEY=your_api_key
+
+# VAPID keys - run `npx web-push generate-vapid-keys` to generate
+VAPID_PUBLIC_KEY=public_vapid_key
+VAPID_PRIVATE_KEY=private_vapid_key
